--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,14 +15,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: 1.1.15
   
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install poetry -U
           poetry install
 
       - name: Test with pytest
