--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry -U
-          poetry install
+          python -m poetry install
 
       - name: Test with pytest
         run: |
