--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "devpair"
-version = "1.1.2"
+version = "1.1.3"
 description = "Pair script that manage a pair programming session using git."
 authors = ["raphael.kieling <raphael.kieling@telus.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
