--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,11 +16,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
   
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: 1.2.2
+  
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry -U
-          python -m poetry install
+          poetry install
 
       - name: Test with pytest
         run: |
