--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,9 +23,9 @@ jobs:
   
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           poetry install
 
       - name: Test with pytest
         run: |
-          python -m pytest
+          python3 -m pytest
