--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 click = "^8.0.4"
 loguru = "^0.6.0"
 GitPython = "^3.1.29"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
