wip: working to add black and flake8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-dateutil = "^2.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -23,3 +25,26 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 devpair = "devpair:exec_cli"
+
+[flake8]
+ignore = 'E203, E266, E501, W503, F403, F401'
+max-line-length = 79
+max-complexity = 18
+select = 'B,C,E,F,W,T4,B9'
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
