--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,19 +16,13 @@ repos:
         name: flake8
         entry: flake8
         language: system
+        args: ['--ignore=E203', '--max-line-length=88']
         types: [python]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.4.2
     hooks:
       - id: isort
         args: ["--profile", "black"]
-  - repo: local
-    hooks:
-      - id: mypy
-        name: mypy
-        entry: mypy
-        language: system
-        types: [python]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.3.0
     hooks:
