--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ python-dateutil = "^2.8.2"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 pre-commit = "^2.20.0"
+pytest-freezegun = "^0.4.2"
+freezegun = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
