--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
         name: flake8
         entry: flake8
         language: system
-        args: ['--ignore=E203', '--max-line-length=88']
+        args: ['--ignore=E203,W291,W503', '--max-line-length=88']
         types: [python]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.4.2
@@ -26,5 +26,10 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.3.0
     hooks:
-      - id: trailing-whitespace
       - id: end-of-file-fixer
+  - repo: local
+    hooks:
+      - id: pytest-check
+        name: pytest-check
+        entry: bash -c 'pytest'
+        language: system
