--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,5 +32,5 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: bash -c 'pytest'
+        entry: bash -c 'poetry run pytest'
         language: system
