--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,13 @@
 name: Python Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 
 jobs:
   checker:
