--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,12 @@ jobs:
         with:
           password: ${{ secrets.PYPI_TOKEN }}
 
-      - name: Changelog
-        uses: Bullrich/generate-release-changelog@master
-        id: Changelog
+      - name: "Build Changelog"
+        id: build_changelog
+        uses: mikepenz/release-changelog-builder-action@{latest-release}
         env:
-          REPO: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
@@ -43,7 +44,6 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body: |
-            ${{ steps.Changelog.outputs.changelog }}
+          body: ${{steps.build_changelog.outputs.changelog}}
           draft: false
           prerelease: false
