--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 pre-commit = "^2.20.0"
 freezegun = "^1.2.2"
+wily = "^1.24.0"
 
 [build-system]
 requires = ["poetry-core"]
