--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,4 +32,17 @@ jobs:
 
       - name: Test with pytest
         run: |
-          poetry run pytest
+          make coverage
+
+      - name: Upload coverage data to coveralls.io
+        run: coveralls --service=github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_PARALLEL: true
+
+      - name: Converage finished
+        run: |
+          pip install --upgrade coveralls
+          coveralls --service=github --finish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
