--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.6.0"
 GitPython = "^3.1.29"
 python-dateutil = "^2.8.2"
 cowsay = "^5.0"
+coveralls = "^3.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
