--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7"]
 
     steps:
       - uses: actions/checkout@v3
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+          pip install coveralls
           pip install poetry
           poetry install -v
 
@@ -42,7 +43,6 @@ jobs:
 
       - name: Converage finished
         run: |
-          pip install --upgrade coveralls
           coveralls --service=github --finish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
