feat: adding more python versions in the test

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,14 +8,13 @@ on:
     branches:
       - main
 
-
 jobs:
   checker:
-    name:  Checking  🐍
+    name: Checking  🐍
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7"]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
 
     steps:
       - uses: actions/checkout@v3
